[project]
name = "pubmed-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.31"
pandas = {source = "pypi"}

[tool.poetry.scripts]
get-papers-list = "pubmed_scraper.cli:main"
